// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Long thread 1`] = `
<div
  class="w-1/3 m-auto h-400px s-k5apxeG8geqr"
>
  <div
    class="discussion s-0ASxPKiLViNe"
  >
    <h3
      class="s-0ASxPKiLViNe"
    >
      Discussion
    </h3>
     
    <div
      class="messages s-0ASxPKiLViNe"
    >
      <span
        class="s-39hAxfuGaFJz"
      >
        15 sept. 2023
      </span>
      <!--&lt;Day&gt;-->
      
      <div
        class="s-r0DnIy4wO_3-"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 30px; --color: #9c3096; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Fernand Naudin"
            class="s-engCJu8q-fNe"
            height="30"
            referrerpolicy="no-referrer"
            width="30"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            FN
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
      </div>
       
      <span
        class="time s-r0DnIy4wO_3-"
      >
        8:44:46
      </span>
       
      <span
        class="message s-r0DnIy4wO_3-"
      >
        Qu'est-ce qui se passe encore ?
      </span>
      <!--&lt;Message&gt;-->
      
      
      <div
        class="s-r0DnIy4wO_3-"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 30px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Maître Follas"
            class="s-engCJu8q-fNe"
            height="30"
            referrerpolicy="no-referrer"
            width="30"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            MF
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
      </div>
       
      <span
        class="time s-r0DnIy4wO_3-"
      >
        8:44:47
      </span>
       
      <span
        class="message s-r0DnIy4wO_3-"
      >
        Notre ami va se faire un plaisir de vous l'expliquer.
      </span>
      <!--&lt;Message&gt;-->
      
      
      <div
        class="s-r0DnIy4wO_3-"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 30px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Pascal"
            class="s-engCJu8q-fNe"
            height="30"
            referrerpolicy="no-referrer"
            width="30"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            P
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
      </div>
       
      <span
        class="time s-r0DnIy4wO_3-"
      >
        8:44:47
      </span>
       
      <span
        class="message s-r0DnIy4wO_3-"
      >
        Les Volfoni ont organisé à la péniche une petite réunion des cadres, façon meeting, si vous voyez ce que je veux dire.
M'enfin quoi, on parle dans votre dos.
      </span>
      <!--&lt;Message&gt;-->
      
      
      <div
        class="s-r0DnIy4wO_3-"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 30px; --color: #9c3096; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Fernand Naudin"
            class="s-engCJu8q-fNe"
            height="30"
            referrerpolicy="no-referrer"
            width="30"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            FN
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
      </div>
       
      <span
        class="time s-r0DnIy4wO_3-"
      >
        8:44:48
      </span>
       
      <span
        class="message s-r0DnIy4wO_3-"
      >
        Et tu tiens ça d'où ?
      </span>
      <!--&lt;Message&gt;-->
      
      
      <div
        class="s-r0DnIy4wO_3-"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 30px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Pascal"
            class="s-engCJu8q-fNe"
            height="30"
            referrerpolicy="no-referrer"
            width="30"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            P
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
      </div>
       
      <span
        class="time s-r0DnIy4wO_3-"
      >
        8:44:48
      </span>
       
      <span
        class="message s-r0DnIy4wO_3-"
      >
        Je ne peux pas le dire, j'ai promis. Ce serait mal.
      </span>
      <!--&lt;Message&gt;-->
      
      
      <div
        class="s-r0DnIy4wO_3-"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 30px; --color: #9c3096; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Fernand Naudin"
            class="s-engCJu8q-fNe"
            height="30"
            referrerpolicy="no-referrer"
            width="30"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            FN
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
      </div>
       
      <span
        class="time s-r0DnIy4wO_3-"
      >
        8:44:49
      </span>
       
      <span
        class="message s-r0DnIy4wO_3-"
      >
        Alors ?
      </span>
      <!--&lt;Message&gt;-->
      
      
      <div
        class="s-r0DnIy4wO_3-"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 30px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Maître Follas"
            class="s-engCJu8q-fNe"
            height="30"
            referrerpolicy="no-referrer"
            width="30"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            MF
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
      </div>
       
      <span
        class="time s-r0DnIy4wO_3-"
      >
        8:44:49
      </span>
       
      <span
        class="message s-r0DnIy4wO_3-"
      >
        Eh bien. Euh. Y'a deux solutions : ou on se dérange, ou on méprise. 
Oui, évidemment, n'importe comment une tournée d'inspection peut jamais nuire, bien sûr.
      </span>
      <!--&lt;Message&gt;-->
      
      
      <div
        class="s-r0DnIy4wO_3-"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 30px; --color: #9c3096; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Fernand Naudin"
            class="s-engCJu8q-fNe"
            height="30"
            referrerpolicy="no-referrer"
            width="30"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            FN
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
      </div>
       
      <span
        class="time s-r0DnIy4wO_3-"
      >
        8:44:50
      </span>
       
      <span
        class="message s-r0DnIy4wO_3-"
      >
        Bon, on va y aller, hmm ?
      </span>
      <!--&lt;Message&gt;-->
      
      
      <div
        class="s-r0DnIy4wO_3-"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 30px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Pascal"
            class="s-engCJu8q-fNe"
            height="30"
            referrerpolicy="no-referrer"
            width="30"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            P
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
      </div>
       
      <span
        class="time s-r0DnIy4wO_3-"
      >
        8:44:50
      </span>
       
      <span
        class="message s-r0DnIy4wO_3-"
      >
        Monsieur Fernand, y'a peut-être une place pour moi dans votre auto. Des fois que la réunion devienne houleuse ... J'ai une présence tranquillisante.
      </span>
      <!--&lt;Message&gt;-->
      
      
    </div>
     
    <form
      class="s-0ASxPKiLViNe"
    >
      <fieldset
        class="s-Fe6WNbR-55zp"
      >
         
        <input
          class="s-Fe6WNbR-55zp"
        />
      </fieldset>
      <!--&lt;Input&gt;-->
       
      <button
        class="s-NMyTiX1zi6rz"
        disabled=""
        title="Envoyer à tous"
        type="submit"
      >
        <div
          class="s-NMyTiX1zi6rz"
        >
          <span
            class="material-icons s-NMyTiX1zi6rz"
          >
            send
          </span>
          
          
        </div>
         
      </button>
      <!--&lt;Button&gt;-->
    </form>
  </div>
  <!--&lt;Container&gt;-->
</div>
`;

exports[`short thread 1`] = `
<div
  class="discussion s-0ASxPKiLViNe"
>
  <h3
    class="s-0ASxPKiLViNe"
  >
    Discussion
  </h3>
   
  <div
    class="messages s-0ASxPKiLViNe"
  >
    <span
      class="s-39hAxfuGaFJz"
    >
      15 sept. 2023
    </span>
    <!--&lt;Day&gt;-->
    
    <div
      class="s-r0DnIy4wO_3-"
    >
      <figure
        class="s-engCJu8q-fNe colored"
        style="--dimension: 30px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Pascal"
          class="s-engCJu8q-fNe"
          height="30"
          referrerpolicy="no-referrer"
          width="30"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          P
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
    </div>
     
    <span
      class="time s-r0DnIy4wO_3-"
    >
      8:44:51
    </span>
     
    <span
      class="message s-r0DnIy4wO_3-"
    >
      Aww yeah!!
    </span>
    <!--&lt;Message&gt;-->
    
    
    <span
      class="s-39hAxfuGaFJz"
    >
      16 sept. 2023
    </span>
    <!--&lt;Day&gt;-->
    
    <div
      class="s-r0DnIy4wO_3-"
    >
      <figure
        class="s-engCJu8q-fNe colored"
        style="--dimension: 30px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Pascal"
          class="s-engCJu8q-fNe"
          height="30"
          referrerpolicy="no-referrer"
          width="30"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          P
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
    </div>
     
    <span
      class="time s-r0DnIy4wO_3-"
    >
      8:44:51
    </span>
     
    <span
      class="message s-r0DnIy4wO_3-"
    >
      Another one
    </span>
    <!--&lt;Message&gt;-->
    
    
  </div>
   
  <form
    class="s-0ASxPKiLViNe"
  >
    <fieldset
      class="s-Fe6WNbR-55zp"
    >
       
      <input
        class="s-Fe6WNbR-55zp"
      />
    </fieldset>
    <!--&lt;Input&gt;-->
     
    <button
      class="s-NMyTiX1zi6rz"
      disabled=""
      title="Envoyer à tous"
      type="submit"
    >
      <div
        class="s-NMyTiX1zi6rz"
      >
        <span
          class="material-icons s-NMyTiX1zi6rz"
        >
          send
        </span>
        
        
      </div>
       
    </button>
    <!--&lt;Button&gt;-->
  </form>
</div>
`;

exports[`thread and history 1`] = `
<div
  class="discussion s-0ASxPKiLViNe"
>
  <h3
    class="s-0ASxPKiLViNe"
  >
    Discussion
  </h3>
   
  <div
    class="messages s-0ASxPKiLViNe"
  >
    <span
      class="s-39hAxfuGaFJz"
    >
      15 sept. 2023
    </span>
    <!--&lt;Day&gt;-->
    
    <button
      class="s-fjvlHmKAXl6D"
    >
      <figure
        class="s-engCJu8q-fNe colored"
        style="--dimension: 30px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Pascal"
          class="s-engCJu8q-fNe"
          height="30"
          referrerpolicy="no-referrer"
          width="30"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          P
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
       
      <span
        class="time s-fjvlHmKAXl6D"
      >
        8:44:51
      </span>
       
      <span
        class="message s-fjvlHmKAXl6D"
      >
        Retourne
      </span>
    </button>
    <!--&lt;HistoryRecord&gt;-->
    
    
    <div
      class="s-r0DnIy4wO_3-"
    >
      <figure
        class="s-engCJu8q-fNe colored"
        style="--dimension: 30px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Pascal"
          class="s-engCJu8q-fNe"
          height="30"
          referrerpolicy="no-referrer"
          width="30"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          P
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
    </div>
     
    <span
      class="time s-r0DnIy4wO_3-"
    >
      8:44:51
    </span>
     
    <span
      class="message s-r0DnIy4wO_3-"
    >
      Aww yeah!!
    </span>
    <!--&lt;Message&gt;-->
    
    
    <button
      class="s-fjvlHmKAXl6D"
    >
      <figure
        class="s-engCJu8q-fNe colored"
        style="--dimension: 30px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Pascal"
          class="s-engCJu8q-fNe"
          height="30"
          referrerpolicy="no-referrer"
          width="30"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          P
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
       
      <span
        class="time s-fjvlHmKAXl6D"
      >
        8:44:53
      </span>
       
      <span
        class="message s-fjvlHmKAXl6D"
      >
        Déplace
      </span>
    </button>
    <!--&lt;HistoryRecord&gt;-->
    
    
    <button
      class="s-fjvlHmKAXl6D"
    >
      <figure
        class="s-engCJu8q-fNe colored"
        style="--dimension: 30px; --color: #73778c; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Bastien"
          class="s-engCJu8q-fNe"
          height="30"
          referrerpolicy="no-referrer"
          width="30"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          B
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
       
      <span
        class="time s-fjvlHmKAXl6D"
      >
        8:44:54
      </span>
       
      <span
        class="message s-fjvlHmKAXl6D"
      >
        Déplace
      </span>
    </button>
    <!--&lt;HistoryRecord&gt;-->
    
    
    <button
      class="s-fjvlHmKAXl6D isActive"
    >
      <figure
        class="s-engCJu8q-fNe colored"
        style="--dimension: 30px; --color: #73778c; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Bastien"
          class="s-engCJu8q-fNe"
          height="30"
          referrerpolicy="no-referrer"
          width="30"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          B
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
       
      <span
        class="time s-fjvlHmKAXl6D"
      >
        8:44:55
      </span>
       
      <span
        class="message s-fjvlHmKAXl6D"
      >
        Pivote
      </span>
    </button>
    <!--&lt;HistoryRecord&gt;-->
    
    
    <span
      class="s-39hAxfuGaFJz"
    >
      16 sept. 2023
    </span>
    <!--&lt;Day&gt;-->
    
    <div
      class="s-r0DnIy4wO_3-"
    >
      <figure
        class="s-engCJu8q-fNe colored"
        style="--dimension: 30px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Pascal"
          class="s-engCJu8q-fNe"
          height="30"
          referrerpolicy="no-referrer"
          width="30"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          P
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
    </div>
     
    <span
      class="time s-r0DnIy4wO_3-"
    >
      8:44:51
    </span>
     
    <span
      class="message s-r0DnIy4wO_3-"
    >
      Another one
    </span>
    <!--&lt;Message&gt;-->
    
    
    <button
      class="s-fjvlHmKAXl6D"
    >
      <figure
        class="s-engCJu8q-fNe colored"
        style="--dimension: 30px; --color: #73778c; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Bastien"
          class="s-engCJu8q-fNe"
          height="30"
          referrerpolicy="no-referrer"
          width="30"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          B
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
       
      <span
        class="time s-fjvlHmKAXl6D"
      >
        8:44:52
      </span>
       
      <span
        class="message s-fjvlHmKAXl6D"
      >
        Pioche
      </span>
    </button>
    <!--&lt;HistoryRecord&gt;-->
    
    
  </div>
   
  <form
    class="s-0ASxPKiLViNe"
  >
    <fieldset
      class="s-Fe6WNbR-55zp"
    >
       
      <input
        class="s-Fe6WNbR-55zp"
      />
    </fieldset>
    <!--&lt;Input&gt;-->
     
    <button
      class="s-NMyTiX1zi6rz"
      disabled=""
      title="Envoyer à tous"
      type="submit"
    >
      <div
        class="s-NMyTiX1zi6rz"
      >
        <span
          class="material-icons s-NMyTiX1zi6rz"
        >
          send
        </span>
        
        
      </div>
       
    </button>
    <!--&lt;Button&gt;-->
  </form>
</div>
`;
